-ber: added project_abbreviation config variable so berbtab2bsml isn't dependent on specific assembly id patterns.
-augustus2bsml.pl: added 2.3.1 to version map
-glimmer3: added support for single input files
-prok_pipeline: replaced the single version of the prok pipeline with two new versions (one with database loading and one without)
-ncbi-blastall: new component
-mosaik: new component
-core_qiime: new component
-mothur_unique_seq_limit: new component
-qiime_mothur_cnvr: new component
-Create_Qiime_tables.pl: formatting support script
-mothur_unique_seq_limit.pl: 16S pipeline support script
-qiime_to_mothur_meta.pl: 16S pipeline support script
-clovr_metagenomics_prep: preprocessing component for clovr_metagenomics pipeline
-clovr_metagenomics_tables: postprocessing component for clovr_metagenomics pipeline
-UCLUST component: new variable 'CLUSTER_OUTPUT_LIST' output
-clovr_metagenomics_tsvtables.pl: postprocessing component for clovr_metagenomics pipeline
-blast_seq_screen: new component that will filter a set of sequences using blast output and a fasta.

ergatis-v2r12b1
----
-pipeline_summary: will use the second set of non-space chars in the input fasta file and set it to Sequence[@title]
-build_pipeline.cgi: will skip adding inputs unless they have a value.
-pipeline_summary: rewrite of pipeline_summary.pl (includes ordered locus assignment)
-p_func: included p_func.i1.xml to Makefile.PL
-bsml2chado: Adding <state> element to cache primary keys step in bsml2chado.xml
-bsml2chado: Adding checksum_filename to component files
-p_func: Bug fixes and minor improvements and update to component files
-tRNAscan-SE: now allows no search type to be specified, in order to invoke the default search type of 'eukaryotic'
-split_fasta: corrected problem with duplicates in the output list
-genemark-es: new component
-tmhmm2bsml: changed Seq-data-import[@id] value to ensure id does not start with numbers.