@@ -1,0 +1,67 @@
+[interface]
+classification = alignment
+
+[parameters]
+
+;;the reference file
+$;REFERENCE$;=
+
+;;additional bowtie-build arguments
+$;OTHER_BUILD_ARGS$;=
+
+;;location of the reads file 
+$;Q$;= 
+;;location of the reads mate file
+$;Q2$;= 
+
+;;maximum insert size
+$;X$;=300
+
+;;maximum number of mismatches
+$;V$;=2
+
+;;maximum number of alignments per read...those with more alignments will be ignored
+$;M$;=1
+
+;;additional arguments
+$;OTHER_OPTS$;=
+
+[input]
+$;INPUT_FILE_LIST$; = 
+$;INPUT_FILE$; = 
+$;INPUT_DIRECTORY$; = 
+;; the following is only used when iterating over an INPUT_DIRECTORY
+$;INPUT_EXTENSION$; = fsa
+
+[output]
+$;OUTPUT_TOKEN$; = default
+$;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/$;SAMPLE$;
+$;BSML_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bsml.list
+
+[component]
+$;COMPONENT_NAME$; = bowtie_rna_seq
+$;DESCRIPTION$; = aligns reads against a single reference file contining one or more contigs
+$;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;PIPELINE_TOKEN$; = unnamed
+
+;The version,revision,tag here is set by an interpolated CVS tag
+$;VERSION$; = 2.0
+$;RELEASE_TAG$; = $Name$
+$;REVISION$;            = $Revision: 5801 $
+
+$;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
+$;ITERATOR1$; = i1
+$;ITERATOR1_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATOR1$;.xml
+
+;Distributed options
+$;GROUP_COUNT$; = 150
+$;NODISTRIB$; = 0
+
+;the following keys are replaced at runtime by the invocation script
+$;COMPONENT_CONFIG$; = 
+$;COMPONENT_XML$; = 
+$;PIPELINE_XML$; = 
+$;PIPELINEID$; = 
+
+[include]
+$;PROJECT_CONFIG$;=
