@@ -1,0 +1,95 @@
+[interface]
+classification = alignment
+
+[parameters]
+
+;;the FASTA reference file
+$;FR$;=
+
+;;name of this sample, used for output folders
+$;SAMPLE$;=sample1
+
+;;location of the reads file 
+$;Q$;= 
+;;optional reads mate file, prepend with -q2
+$;Q2$;= 
+
+;;optional base qualities for first mate, prepend with -fq
+$;FQ$;=
+;;optional base qualities for second mate, prepend with -fq2
+$;FQ2$;=
+
+;;the sequencer technology used to obtain the reads 
+;;one of 454, helicos, illumina, sanger, or solid
+$;ST$;=illumina
+
+;;optional mean fragment length for paired-end reads, prepend with -mfl
+$;MFL$;=
+
+;;the hash size
+$;HS$;=15
+;;maximum number of mismatches allowed per read
+$;MM$;=2
+;;place only uniquely aligning reads(unique) or place all reads (all) 
+;;USE unique for non-paired reads
+$;M$;=all
+;;maximum hash positions per seed
+$;MHP$;=100
+;;alignment candidate threshold
+$;ACT$;=20
+;;number of processors
+$;P$;=2
+;;local alignment search radius
+$;LS$;=100
+
+;;additional arguments for MosaikAlign 
+$;OTHER_ALIGN_OPTS$;=
+
+;;additional arguments for MosaikSort
+$;OTHER_SORT_OPTS$;=
+
+;;assembly file format for MosaikAssembler output
+$;FORM$;=ace
+
+;;additional arguments for MosaikAssembler
+$;OTHER_ASSEMBLER_OPTS$;=
+
+[input]
+$;INPUT_FILE_LIST$; = 
+$;INPUT_FILE$; = 
+$;INPUT_DIRECTORY$; = 
+;; the following is only used when iterating over an INPUT_DIRECTORY
+$;INPUT_EXTENSION$; = fsa
+
+[output]
+$;OUTPUT_TOKEN$; = default
+$;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/$;SAMPLE$;
+$;BSML_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bsml.list
+
+[component]
+$;COMPONENT_NAME$; = mosaik_rna_seq
+$;DESCRIPTION$; = aligns reads against a single reference file contining one or more contigs
+$;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;PIPELINE_TOKEN$; = unnamed
+
+;The version,revision,tag here is set by an interpolated CVS tag
+$;VERSION$; = 2.0
+$;RELEASE_TAG$; = $Name$
+$;REVISION$;            = $Revision: 5801 $
+
+$;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
+$;ITERATOR1$; = i1
+$;ITERATOR1_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATOR1$;.xml
+
+;Distributed options
+$;GROUP_COUNT$; = 150
+$;NODISTRIB$; = 0
+
+;the following keys are replaced at runtime by the invocation script
+$;COMPONENT_CONFIG$; = 
+$;COMPONENT_XML$; = 
+$;PIPELINE_XML$; = 
+$;PIPELINEID$; = 
+
+[include]
+$;PROJECT_CONFIG$;=
