@@ -3,7 +3,7 @@
 <commandSetRoot xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation='commandSet.xsd'>
     <commandSet type="serial">
         <state>incomplete</state>
-        <name>mosaik workflow</name>
+        <name>mosaik_rna_seq workflow</name>
         <!--Processing-->
         <command>
             <type>RunUnixCommand</type>
@@ -19,10 +19,10 @@
             <executable>mkdir</executable>
             <arg>-p -m 777 $;TMP_DIR$;</arg>
         </command>
-
+ 
         <command>
             <type>RunUnixCommand</type>
-            <name>MosaikBuild Refs</name>
+            <name>MosaikBuild Reference</name>
             <state>incomplete</state>
             <executable>$;MOSAIK_BUILD_EXEC$;</executable>
 
@@ -35,8 +35,9 @@
             <value>$;OUTPUT_DIRECTORY$;/buildref.stderr</value>
             </param>
 
-            <arg>-fr $;FR$; $;FR2$; $;FQ$; $;FQ2$; -oa $;OUTPUT_DIRECTORY$;/references.dat</arg>            
+            <arg>-fr $;FR$; -oa $;OUTPUT_DIRECTORY$;/reference.dat</arg>
         </command>
+
 
         <command>
             <type>RunUnixCommand</type>
@@ -53,7 +54,7 @@
             <value>$;OUTPUT_DIRECTORY$;/buildread.stderr</value>
             </param>
 
-            <arg>-q $;Q$; $;Q2$; -out $;OUTPUT_DIRECTORY$;/reads.dat -st $;ST$;</arg>            
+            <arg>-q $;Q$; $;Q2$; -out $;OUTPUT_DIRECTORY$;/reads.dat -st $;ST$; $;MFL$;</arg>            
         </command>
 
 
@@ -72,7 +73,7 @@
             <value>$;OUTPUT_DIRECTORY$;/align.stderr</value>
             </param>
 
-            <arg>-in $;OUTPUT_DIRECTORY$;/reads.dat -out $;OUTPUT_DIRECTORY$;/aligned.dat -ia $;OUTPUT_DIRECTORY$;/references.dat -hs $;HS$; -mm $;MM$; -m $;M$; -mhp $;MHP$; -act $;ACT$; -p $;P$; $;OTHER_ALIGN_OPTS$;</arg>            
+            <arg>-in $;OUTPUT_DIRECTORY$;/reads.dat -out $;OUTPUT_DIRECTORY$;/aligned.dat -ia $;OUTPUT_DIRECTORY$;/reference.dat -hs $;HS$; -mm $;MM$; -m $;M$; -mhp $;MHP$; -act $;ACT$; -p $;P$; -ls $;LS$; $;OTHER_ALIGN_OPTS$;</arg>            
         </command>
 
         <command>
@@ -90,7 +91,7 @@
             <value>$;OUTPUT_DIRECTORY$;/sort.stderr</value>
             </param>
 
-            <arg>-in $;OUTPUT_DIRECTORY$;/aligned.dat -out $;OUTPUT_DIRECTORY$;/aligned_sorted.dat $;OTHER_SORT_OPTS$;</arg>            
+            <arg>-in $;OUTPUT_DIRECTORY$;/aligned.dat -out $;OUTPUT_DIRECTORY$;/aligned_sorted.dat $;OTHER_SORT_OPTS$; -iuo</arg>            
         </command>
 
         <command>
@@ -116,43 +117,43 @@
             <value>$;OUTPUT_DIRECTORY$;/assemble.stderr</value>
             </param>
 
-            <arg>-in $;OUTPUT_DIRECTORY$;/aligned_sorted.dat -ia $;OUTPUT_DIRECTORY$;/references.dat -f $;FORM$; -out $;OUTPUT_DIRECTORY$;/ace_files/assembled</arg>            
+            <arg>-in $;OUTPUT_DIRECTORY$;/aligned_sorted.dat -ia $;REFERENCE$; -f $;FORM$; -out $;OUTPUT_DIRECTORY$;/ace_files/assembled</arg>            
         </command>
 
-       <command>
+        <command>
             <type>RunUnixCommand</type>
-            <name>MosaikText</name>
+            <name>MosaikCoverage</name>
             <state>incomplete</state>
-            <executable>$;MOSAIK_TEXT_EXEC$;</executable>
+            <executable>$;MOSAIK_COVERAGE_EXEC$;</executable>
 
             <param>
             <key>stdout</key>
-            <value>$;OUTPUT_DIRECTORY$;/text.stdout</value>
+            <value>$;OUTPUT_DIRECTORY$;/coverage.stdout</value>
             </param>
             <param>
             <key>stderr</key>
-            <value>$;OUTPUT_DIRECTORY$;/text.stderr</value>
+            <value>$;OUTPUT_DIRECTORY$;/coverage.stderr</value>
             </param>
 
-            <arg>-in $;OUTPUT_DIRECTORY$;/aligned_sorted.dat -sam $;OUTPUT_DIRECTORY$;/aligned_sorted.sam</arg>
+            <arg>-in $;OUTPUT_DIRECTORY$;/aligned_sorted.dat -ia $;REFERENCE$; -ngc</arg>            
         </command>
 
-       <command>
+        <command>
             <type>RunUnixCommand</type>
-            <name>Gunzip SAM file</name>
+            <name>Gene Expression Stats</name>
             <state>incomplete</state>
-            <executable>/usr/bin/gunzip</executable>
+            <executable>$;BIN_DIR$;/mosaik_gene_expr_stats.pl</executable>
 
             <param>
             <key>stdout</key>
-            <value>$;OUTPUT_DIRECTORY$;/gunzip.stdout</value>
+            <value>$;OUTPUT_DIRECTORY$;/mosaik_gene_expr_stats.stdout</value>
             </param>
             <param>
             <key>stderr</key>
-            <value>$;OUTPUT_DIRECTORY$;/gunzip.stderr</value>
+            <value>$;OUTPUT_DIRECTORY$;/mosaik_gene_expr_stats.stderr</value>
             </param>
 
-            <arg>$;OUTPUT_DIRECTORY$;/aligned_sorted.sam.gz</arg>
+            <arg>--coverage_file=$;OUTPUT_DIRECTORY$;/coverage.stdout --assembler_file=$;OUTPUT_DIRECTORY$;/assemble.stdout --output_file=$;OUTPUT_DIRECTORY$;/$;SAMPLE$;_expression</arg>
         </command>
 
     </commandSet>
