@@ -294,3 +294,23 @@ $;UCLUST_EXEC$;=/usr/local/bioinf/UCLUST/uclust
 
 [component crossbow]
 $;CROSSBOW_EXEC$;=/opt/crossbow/local/crossbow.pl
+
+[component mosaik_rna_seq]
+$;MOSAIK_ALIGNER_EXEC$;=/usr/local/bin/MosaikAligner
+$;MOSAIK_BUILD_EXEC$;=/usr/local/bin/MosaikBuild
+$;MOSAIK_ASSEMBLER_EXEC$;=/usr/local/bin/MosaikAssembler
+$;MOSAIK_SORT_EXEC$;=/usr/local/bin/MosaikSort
+$;MOSAIK_COVERAGE_EXEC$;=/usr/local/bin/MosaikCoverage
+$;MOSAIK_TEXT_EXEC$;=/usr/local/bin/MosaikText
+
+[component mosaik]
+$;MOSAIK_ALIGNER_EXEC$;=/usr/local/bin/MosaikAligner
+$;MOSAIK_BUILD_EXEC$;=/usr/local/bin/MosaikBuild
+$;MOSAIK_ASSEMBLER_EXEC$;=/usr/local/bin/MosaikAssembler
+$;MOSAIK_SORT_EXEC$;=/usr/local/bin/MosaikSort
+$;MOSAIK_TEXT_EXEC$;=/usr/local/bin/MosaikText
+
+[component bowtie_rna_seq]
+$;BOWTIE_EXEC$;=/usr/local/packages/bowtie/bowtie
+$;BOWTIE_BUILD_EXEC$;=/usr/local/packages/bowtie/bowtie-build
+
